--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,8 +1,8 @@
 FROM postgres:latest
 
-WORKDIR /c/Users/anthony/PycharmProjects/SAI
+WORKDIR /c/Users/anthony/PycharmProjects/TicTacToe
 
 # TODO update to load db with table
-#COPY tools/template_sai_db_plain_text.sql /docker-entrypoint-initdb.d/init.sql
+COPY template_ttt_db_plain_text.sql /docker-entrypoint-initdb.d/init.sql
 
-#RUN chmod +x /docker-entrypoint-initdb.d/init.sql
+RUN chmod +x /docker-entrypoint-initdb.d/init.sql
